40% finishing my tailwind using page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,114 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/main.css">
   <title>Main page</title>
 </head>
 <body>
-  <nav class="container bg-red-500 mx-auto text-3xl">hello</nav>
-</body>
+  <header class="flex border-b-2 flex-row items-center justify-between space-x-6 px-3 py-3">
+    <!--logo and header-->
+    <div class="w-1/4 px-3">
+      <svg class="flex justify-center inline-flex items-center" width="30" viewBox="0 0 80 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M22.0604 27.0103C29.7333 23.0893 35.8474 16.6142 39.6254 8.51905C40.1123 7.47585 39.871 6.25371 39.3648 5.21976C38.1966 2.83369 37.9273 0.35731 31.5792 1.07481L29.0769 1.19405C30.0128 1.19405 29.5449 1.19405 29.0769 1.19405C26.2213 9.83921 20.8705 16.9667 13.0175 20.9078C7.54419 23.7048 3.49869 28.7902 1.59493 34.8927L1.08063 36.5412C1.02718 36.7125 0.953783 36.7439 1.03271 36.905V36.905C1.69551 38.2585 2.41237 37.8338 1.24774 36.8773C-0.0162787 35.8391 4.54649 41.9692 8.20235 42.3859C8.98846 42.4755 9.62624 41.8869 9.99718 41.188C12.8897 35.7384 16.5983 29.7497 22.0604 27.0103Z" fill="#3798A6"/>
+        <path d="M54.293 18.2545C52.9177 18.0829 51.6326 19.0064 50.8501 20.1503C46.5712 26.4051 40.9276 31.4619 34.0992 34.9362C28.0309 37.9875 23.3905 43.7085 21.2488 50.5738V50.5738C20.8823 51.9051 21.321 53.3053 22.0817 54.4577C22.8541 55.6279 23.2013 56.5055 25.0387 57.2056C25.2331 57.2797 25.4363 57.33 25.6412 57.3659L29.6561 58.0696C30.1014 58.1477 30.5803 57.9029 30.6385 57.4546V57.4546C30.6522 57.3488 30.6656 57.26 30.6995 57.1589C33.5732 48.5843 39.3809 41.6511 47.1875 37.7332C52.0449 35.251 56.5674 29.4173 58.7712 23.8703C59.2774 22.5963 58.9189 21.1675 57.9822 20.1666V20.1666C57.743 19.9111 57.4687 19.6866 57.1678 19.5079C55.698 18.635 54.964 18.3382 54.293 18.2545Z" fill="#3798A6"/>
+        <path d="M17.8462 46.7817C18.4399 48.0437 20.2086 47.5179 20.8231 46.2658C23.9715 39.8511 29.07 34.8495 35.2979 31.6915C41.4799 28.5111 46.6705 23.683 50.3399 17.7735C50.6236 17.3166 50.7683 16.7849 50.7594 16.2472C50.658 10.1604 49.3958 9.67645 47.3183 8.9339C45.5442 8.29976 43.3135 8.84337 42.332 10.4516C37.9465 17.6372 31.7406 23.4608 24.3513 27.2417C19.6664 29.5615 15.8593 33.5228 13.4571 38.3374C13.2609 38.7306 13.1639 39.1681 13.1742 39.6074C13.3408 46.715 16.2215 43.2109 17.84 46.768C17.8439 46.7766 17.8422 46.773 17.8462 46.7817V46.7817Z" fill="#3798A6"/>
+        </svg>
+      <h1 class="flex inline-flex font-bold text-2xl items-center">Windster</h1>    
+    </div>
+    <!--search input-->
+    <div class="px-44 absolute">
+      <form action="">
+        <svg class="w-4 h-4 absolute mt-3 ml-5 text-gray-500" fill="currentColor" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 487.95 487.95" style="enable-background:new 0 0 487.95 487.95;" xml:space="preserve">
+          <path d="M481.8,453l-140-140.1c27.6-33.1,44.2-75.4,44.2-121.6C386,85.9,299.5,0.2,193.1,0.2S0,86,0,191.4s86.5,191.1,192.9,191.1
+          c45.2,0,86.8-15.5,119.8-41.4l140.5,140.5c8.2,8.2,20.4,8.2,28.6,0C490,473.4,490,461.2,481.8,453z M41,191.4
+          c0-82.8,68.2-150.1,151.9-150.1s151.9,67.3,151.9,150.1s-68.2,150.1-151.9,150.1S41,274.1,41,191.4z"/>
+        </svg>
+          <input type="text" class="border-2 border-gray-200
+            pl-12 rounded-lg p-2  bg-gray-50 focus:outline-none"
+            placeholder="Search">
+        </form>
+    </div>
+
+    <div class="flex flex-row w-2/4 px-2 items-center space-x-6 justify-around">
+      <a href=""><h4 class="px-3">open source</h4></a>
+      <h4 class="font-bold items-center px-3">Star</h4>
+      <button class="px-3 rounded-lg px-2 py-2 bg-blue-300 text-white">
+        upgrade to pro
+      </button>
+    </div>
+  </header>
+  <div class="flex flex-row">
+  <nav class="container w-1/6 border-r-2">
+    <div>
+      <ul class="flex flex-col space-y-6 pt-6 pb-4">
+        <a href="" class="pl-8"><li>Dashboard</li></a>
+        <div class="flex flex-row justify-between">
+          <a  href="" class="pl-8"><li>Kanban</li></a>
+          <a  href="" class="bg-gray-200 rounded-xl px-2 mr-4"><li>Pro</li></a>
+        </div>
+        <div class="flex flex-row justify-between">
+          <a  href="" class="pl-8 "><li>Inbox</li></a>
+          <a  href="" class="bg-gray-200 rounded-xl px-2 mr-4"><li>Pro</li></a>
+        </div>
+        <a  href="" class="pl-8"><li>Users</li></a>
+        <a  href="" class="pl-8"><li>Products</li></a>
+        <a  href="" class="pl-8"><li>Sign In</li></a>
+        <a  href="" class="pl-8"><li>Sign Up</li></a>
+      </ul>
+    </div>
+    <div class="">
+      <ul class="flex flex-col border-t-2 border-w-2 space-y-6  py-4">
+        <a href="" class="pl-8"><li>Upgrade to Pro</li></a>
+        <a  href="" class="pl-8"><li>Documentation</li></a>
+        <a  href="" class="pl-8"><li>Components</li></a>
+        <a  href="" class="pl-8"><li>help</li></a>
+      </ul>
+    </div>
+  </nav>
+  <main class="container">
+    <ul class="flex inline-flex my-2 space-x-6">
+      <a href="" class="flex-1 py-2 "><li>Home</li></a>
+      <a href="" class="inline py-2 "><li>Home</li></a>
+      <a href="" class="inline py-2 "><li>Home</li></a>
+    </ul>
+    <h1 class="text-2xl font-semibold pl-4 ">All users</h1>
+    <div class="py-3 flex items-center space-x-4">
+      <form action="" class="flex-1 bg-blue-300">
+        <input type="text" class="w-auto border-2 border-gray-200
+        rounded-lg p-2 bg-gray-50 focus:outline-none"
+        placeholder="Search for users">
+      </form>
+      <svg class="w-6 h-6 text-gray-500" fill="currentColor" viewBox="0 0 20 20" 
+        xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path></svg>
+      <svg class="mr-2 h-5 w-5 text-gray-500" fill="currentColor" viewBox="0 0 20 20" 
+        xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"></path></svg>
+      <svg class="w-6 h-6 stroke-current text-gray-500" fill="currentColor" viewBox="0 0 20 20" 
+        xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd"></path></svg>
+      <svg class="w-6 h-6 text-gray-500" fill="currentColor" viewBox="0 0 20 20" 
+        xmlns="http://www.w3.org/2000/svg"><path d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"></path></svg>
+      <button class="rounded-lg px-2 py-2 bg-blue-300 text-white ">
+        Add user
+      </button>
+      <button class="rounded-lg px-2 py-2 border-2">
+        Export
+      </button>
+    </div>
+    <div class="table w-full">
+      <div class="table-row-group">
+        <div class="table-row">
+          <div class="table-cell bg-gray-400 text-gray-700 px-4 py-2 text-sm">A cell with more content</div>
+          <div class="table-cell bg-gray-200 text-gray-700 px-4 py-2 text-sm">Cell 2</div>
+          <div class="table-cell bg-gray-400 text-gray-700 px-4 py-2 text-sm">Cell 3</div>
+        </div>
+        <div class="table-row">
+          <div class="table-cell bg-gray-200 text-gray-700 px-4 py-2 text-sm">Cell 4</div>
+          <div class="table-cell bg-gray-400 text-gray-700 px-4 py-2 text-sm">A cell with more content</div>
+          <div class="table-cell bg-gray-200 text-gray-700 px-4 py-2 text-sm">Cell 6</div>
+        </div>
+      </div>
+    </div>
+  </main>
+  </div>
+  </body>
 </html>
